--- a/front-end/my-vite-app/src/Home.css
+++ b/front-end/my-vite-app/src/Home.css
@@ -5,7 +5,7 @@
 
   body {
     color: #333;
-    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
