--- a/front-end/my-vite-app/src/Home.css
+++ b/front-end/my-vite-app/src/Home.css
@@ -803,6 +803,8 @@
     .footer-wrapper {
       flex-direction: column;
       align-items: center;
+      position: absolute;
+      bottom: 0;
     }
 
     .footer-content {
