--- a/front-end/my-vite-app/src/Profile.css
+++ b/front-end/my-vite-app/src/Profile.css
@@ -11,3 +11,20 @@
     align-items: center;
     margin: 10px
 }
+
+.profile-cards{
+    background-color: #ffffff;
+    padding: 15px;
+    box-shadow: 0 0 40px -10px rgba(0, 0, 0, .3), 0 0 25px -15px rgba(0, 0, 0, .2);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    border-radius: 20px;
+    justify-content: space-evenly;
+}
+
+.pcards-img{
+    width: 200px;
+    height: 200px;
+}
