--- a/front-end/my-vite-app/src/Profile.css
+++ b/front-end/my-vite-app/src/Profile.css
@@ -16,7 +16,7 @@
     background-color: #ffffff;
     padding: 15px;
     width: 215px;
-    height: 300px;
+    /* height: 300px; */
     box-shadow: 0 0 40px -10px rgba(0, 0, 0, .3), 0 0 25px -15px rgba(0, 0, 0, .2);
     display: flex;
     flex-direction: column;
@@ -29,6 +29,6 @@
 }
 
 .pcards-img{
-    width: 200PX;
-    height: 200PX;
+    width: 200px;
+    height: 200px;
 }
