--- a/front-end/my-vite-app/src/code-pad/CodePad.css
+++ b/front-end/my-vite-app/src/code-pad/CodePad.css
@@ -38,9 +38,9 @@
 }
 
   .code-copilot{
-    width: 25%;
+    width: 27%;
     height: 100%;
-    padding: 10px;
+    padding-left: 10px;
   }
 
   .greet h3{
@@ -108,4 +108,43 @@
   .copilot-run{
     background: transparent;
     border: none;
+  }
+
+  .chat-log{
+    height: 80vh;
+    overflow-y: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .ai-response{
+    margin-left: 4px;
+    width: 95%;
+    display:flex;
+    flex-wrap: wrap;
+    align-self:flex-start;
+    text-align: left;
+    padding: 3px;
+    border-radius: 8px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    background: linear-gradient(124deg, #ff22002c, #e81d1d2c, #e8b71d2c, #e3e81d2c, #1de8402c, #1ddde82c, #2b1de82c, #dd00f32c, #dd00f32c);
+    background-size: 1800% 1800%;
+    -webkit-animation: rainbow 18s ease infinite;
+    -z-animation: rainbow 18s ease infinite;
+    -o-animation: rainbow 18s ease infinite;
+    animation: rainbow 18s ease infinite;
+  }
+
+  .prompt{
+    align-self:flex-end;
+    text-align: right;
+    width: 60%;
+    margin-left: 35%;
+    background-color: #f6f6f6;
+    display:flex;
+    flex-wrap: wrap;
+    padding: 3px;
+    border-radius: 8px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
   }
