--- a/front-end/my-vite-app/src/CoursePage.css
+++ b/front-end/my-vite-app/src/CoursePage.css
@@ -28,7 +28,7 @@
     background-color:#ffffff;
     padding: 15px;
     box-shadow:0 0 40px -10px rgba(0,0,0,.3), 0 0 25px -15px rgba(0,0,0,.2);
-    height: 70vh;
+    height: 78vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -67,4 +67,21 @@
   );
     transform: scale(1.05);
 
+}
+
+.star-rating {
+    display: flex;
+    justify-content: center;
+}
+
+.star-rating button{
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 2rem;
+    color: grey;
+}
+
+.star-rating button:hover {
+    color: gold;
 }
