recommendation algo for survey

--- a/front-end/my-vite-app/src/LoginModal.css
+++ b/front-end/my-vite-app/src/LoginModal.css
@@ -7,7 +7,7 @@
     top: 0;
     width: 100%;
     z-index: 1000;
-    background: linear-gradient(to right,#6b11cb6f,#2574fc98);
+    background-image: radial-gradient( circle farthest-corner at 10% 20%, rgba(223, 168, 248, 0.687) 0%, rgba(168,222,258,0.687) 21.9%, rgba(189,250,205,0.687) 35.6%, rgba(243,250,189,0.687) 53.9%, rgba(250,227,189,0.687) 66.8%, rgba(248,172,171,0.687) 95%, rgba(254,170,212,0.687) 99.9% );
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     font-weight: bold;
@@ -50,7 +50,12 @@
   }
 
   .user-login:hover{
-    background-color: rgba(146, 135, 231, 0.6);
+    background: linear-gradient(124deg, #ff22005b, #e81d1d5b, #e8b71d5b, #e3e81d5b, #1de8405b, #1ddde85b, #2b1de85b, #dd00f35b, #dd00f35b);
+    background-size: 1800% 1800%;
+    -webkit-animation: rainbow 18s ease infinite;
+    -z-animation: rainbow 18s ease infinite;
+    -o-animation: rainbow 18s ease infinite;
+    animation: rainbow 18s ease infinite;
     color: rgb(0, 0, 0);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.649);
     transform: scale(1.05);
@@ -79,15 +84,19 @@
     font-size: 15px;
     font-weight: 500;
     font-family: inherit;
-    background-color: #1a1a1a;
     cursor: pointer;
-    transition: border-color 0.25s;
-    background-color: rgba(185, 177, 241, 0.639);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.417);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
   }
 
   .login-button:hover{
-    background-color: rgba(120, 104, 237, 0.6);
+    background: linear-gradient(124deg, #ff22005b, #e81d1d5b, #e8b71d5b, #e3e81d5b, #1de8405b, #1ddde85b, #2b1de85b, #dd00f35b, #dd00f35b);
+    background-size: 1800% 1800%;
+    -webkit-animation: rainbow 18s ease infinite;
+    -z-animation: rainbow 18s ease infinite;
+    -o-animation: rainbow 18s ease infinite;
+    animation: rainbow 18s ease infinite;
     color: rgb(0, 0, 0);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.649);
     transform: scale(1.05);
