--- a/front-end/my-vite-app/src/Survey.css
+++ b/front-end/my-vite-app/src/Survey.css
@@ -7,11 +7,32 @@
     top: 0;
     width: 100%;
     z-index: 1000;
-    background: linear-gradient(to right,#6b11cb6f,#2574fc98);
-    -webkit-backdrop-filter: blur(5px);
+    background-image: radial-gradient( circle farthest-corner at 10% 20%, rgba(223, 168, 248, 0.687) 0%, rgba(168,222,258,0.687) 21.9%, rgba(189,250,205,0.687) 35.6%, rgba(243,250,189,0.687) 53.9%, rgba(250,227,189,0.687) 66.8%, rgba(248,172,171,0.687) 95%, rgba(254,170,212,0.687) 99.9% );
     backdrop-filter: blur(5px);
     font-weight: bold;
 }
+
+@-webkit-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+@-moz-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+@-o-keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+@keyframes rainbow {
+    0%{background-position:0% 82%}
+    50%{background-position:100% 19%}
+    100%{background-position:0% 82%}
+}
+
 
   .content{
     display: flex;
@@ -33,9 +54,48 @@
     width: 100%;
   }
 
-  .content button{
-    width: 20vh;
+  .content button {
+    width: 15vh;
     height: 5vh;
-    border: none;
     margin: 10px;
+    border: none;
+    outline: none;
+    position: relative;
+    z-index: 1;
+    border-radius: 5px;
+    background-image: radial-gradient( circle farthest-corner at 10% 20%, rgba(223, 168, 248, 1) 0%, rgba(168,222,258,1) 21.9%, rgba(189,250,205,1) 35.6%, rgba(243,250,189,1) 53.9%, rgba(250,227,189,1) 66.8%, rgba(248,172,171,1) 95%, rgba(254,170,212,1) 99.9% );
+    cursor: pointer;
   }
+  .content button::before {
+    content: "";
+    position: absolute;
+    left: 1px;
+    right: 1px;
+    top: 1px;
+    bottom: 1px;
+    border-radius: 4px;
+    background-color: white;
+    z-index: -1;
+    transition: 200ms
+  }
+
+  .content button::after {
+    content: attr(data);
+    font-size: 16px;
+    background-image: radial-gradient( circle farthest-corner at 10% 20%, rgba(223, 168, 248, 1) 0%, rgba(168,222,258,1) 21.9%, rgba(189,250,205,1) 35.6%, rgba(243,250,189,1) 53.9%, rgba(250,227,189,1) 66.8%, rgba(248,172,171,1) 95%, rgba(254,170,212,1) 99.9% );
+    -webkit-background-clip: text;
+    color: transparent;
+    transition: 200ms
+  }
+  .content button:hover::before {
+    opacity: 50%;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+  }
+  .content button:hover::after{
+    color: white;
+  }
+
+
