--- a/front-end/my-vite-app/src/Survey.css
+++ b/front-end/my-vite-app/src/Survey.css
@@ -155,7 +155,7 @@
     color: gold;
 }
 
-.container-survey button:active{
+.container-survey button.selected{
     color: white;
     background: linear-gradient(124deg, #ff2200c7, #e81d1dc7, #e8b71dc7, #e3e81dc7, #1de840c7, #1ddde8c7, #2b1de8c7, #dd00f3c7, #dd00f3c7);
     background-size: 1800% 1800%;
@@ -165,7 +165,7 @@
     animation: rainbow 18s ease infinite;
 }
 
-.container-survey button:focus{
+.container-survey button.selected{
     background: linear-gradient(124deg, #ff2200c7, #e81d1dc7, #e8b71dc7, #e3e81dc7, #1de840c7, #1ddde8c7, #2b1de8c7, #dd00f3c7, #dd00f3c7);
     background-size: 1800% 1800%;
     -webkit-animation: rainbow 18s ease infinite;
@@ -174,14 +174,14 @@
     animation: rainbow 18s ease infinite;
 }
 
-.container-survey button:focus::before {
+.container-survey button.selected::before {
     opacity: 50%;
     top: 0px;
     right: 0px;
     bottom: 0px;
     left: 0px;
   }
-  .container-survey button:focus::after{
+  .container-survey button.selected::after{
     color: white;
   }
 
