--- a/front-end/my-vite-app/src/screens/profile-page/Profile.css
+++ b/front-end/my-vite-app/src/screens/profile-page/Profile.css
@@ -28,13 +28,8 @@
     height: 110vh;
     justify-content: space-evenly;
     background-image: radial-gradient(farthest-corner at 10% 20%, rgba(223, 168, 248, 0.289) 0%, rgba(168,222,258,0.289) 21.9%, rgba(189,250,205,0.289) 35.6%, rgba(243,250,189,0.289) 53.9%, rgba(250,227,189,0.289) 66.8%, rgba(248,172,171,0.289) 95%, rgba(254,170,212,0.289) 99.9% );
-    text-align: center;
-    -webkit-animation: rainbow 18s ease infinite;
-    -z-animation: rainbow 18s ease infinite;
-    -o-animation: rainbow 18s ease infinite;
-    animation: rainbow 18s ease infinite;
     display: flex;
-    border-radius: 10px;
+    border-radius: 20px;
     flex-direction: column;
     align-items: center;
     width: 25%;
@@ -116,11 +111,6 @@
 
 .completed-courses{
     background-image: radial-gradient(farthest-corner at 10% 20%, rgba(223, 168, 248, 0.289) 0%, rgba(168,222,258,0.289) 21.9%, rgba(189,250,205,0.289) 35.6%, rgba(243,250,189,0.289) 53.9%, rgba(250,227,189,0.289) 66.8%, rgba(248,172,171,0.289) 95%, rgba(254,170,212,0.289) 99.9% );
-    text-align: center;
-    -webkit-animation: rainbow 18s ease infinite;
-    -z-animation: rainbow 18s ease infinite;
-    -o-animation: rainbow 18s ease infinite;
-    animation: rainbow 18s ease infinite;
     padding: 15px;
     width: 100%;
     height: 49vh;
@@ -139,23 +129,26 @@
 .row-scroll{
     display: flex;
     flex-direction: row;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+}
+
+.row{
+    display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
     overflow-y: scroll;
 }
 
 .recommended-courses{
     background-image: radial-gradient(farthest-corner at 10% 20%, rgba(223, 168, 248, 0.289) 0%, rgba(168,222,258,0.289) 21.9%, rgba(189,250,205,0.289) 35.6%, rgba(243,250,189,0.289) 53.9%, rgba(250,227,189,0.289) 66.8%, rgba(248,172,171,0.289) 95%, rgba(254,170,212,0.289) 99.9% );
-    text-align: center;
-    -webkit-animation: rainbow 18s ease infinite;
-    -z-animation: rainbow 18s ease infinite;
-    -o-animation: rainbow 18s ease infinite;
-    animation: rainbow 18s ease infinite;
     padding: 15px;
     width: 100%;
     height: 49vh;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: nowrap;
     align-items: center;
     text-align: center;
@@ -173,12 +166,7 @@
 }
 
 .saved-courses{
-    background-image: radial-gradient( circle farthest-corner at 10% 20%, rgba(223, 168, 248, 1) 0%, rgba(168,222,258,1) 21.9%, rgba(189,250,205,1) 35.6%, rgba(243,250,189,1) 53.9%, rgba(250,227,189,1) 66.8%, rgba(248,172,171,1) 95%, rgba(254,170,212,1) 99.9% );
-    background-size: 1800% 1800%;
-    -webkit-animation: rainbow 18s ease infinite;
-    -z-animation: rainbow 18s ease infinite;
-    -o-animation: rainbow 18s ease infinite;
-    animation: rainbow 18s ease infinite;
+    background-image: radial-gradient(farthest-corner at 10% 20%, rgba(223, 168, 248, 0.289) 0%, rgba(168,222,258,0.289) 21.9%, rgba(189,250,205,0.289) 35.6%, rgba(243,250,189,0.289) 53.9%, rgba(250,227,189,0.289) 66.8%, rgba(248,172,171,0.289) 95%, rgba(254,170,212,0.289) 99.9% );
     padding: 15px;
     width: 100%;
     height: 60vh;
@@ -196,11 +184,6 @@
 
 .coding-sessions{
     background-image: radial-gradient(farthest-corner at 10% 20%, rgba(223, 168, 248, 0.289) 0%, rgba(168,222,258,0.289) 21.9%, rgba(189,250,205,0.289) 35.6%, rgba(243,250,189,0.289) 53.9%, rgba(250,227,189,0.289) 66.8%, rgba(248,172,171,0.289) 95%, rgba(254,170,212,0.289) 99.9% );
-    text-align: center;
-    -webkit-animation: rainbow 18s ease infinite;
-    -z-animation: rainbow 18s ease infinite;
-    -o-animation: rainbow 18s ease infinite;
-    animation: rainbow 18s ease infinite;
     padding: 15px;
     width: 100%;
     height: 38vh;
@@ -219,4 +202,45 @@
 .pcards-img{
     width: 125px;
     height: 125px;
+}
+
+.profile button{
+    background-image: radial-gradient(farthest-corner at 10% 20%, rgba(223, 168, 248, 0.4) 0%, rgba(168,222,258,0.4) 21.9%, rgba(189,250,205,0.4) 35.6%, rgba(243,250,189,0.4) 53.9%, rgba(250,227,189,0.4) 66.8%, rgba(248,172,171,0.4) 95%, rgba(254,170,212,0.4) 99.9% );
+    background-size: 1800% 1800%;
+    text-align: center;
+    -webkit-animation: rainbow 18s ease infinite;
+    -z-animation: rainbow 18s ease infinite;
+    -o-animation: rainbow 18s ease infinite;
+    animation: rainbow 18s ease infinite;
+    padding: 5px;
+    margin: 5px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius: 8px;
+}
+
+.saved-cards{
+    display: flex;
+    width: 70%;
+    background-color: white;
+    padding: 15px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    justify-content: space-between;
+    padding: 5px;
+    border-radius: 8px;
+    margin: 5px;
+}
+
+.saved-img{
+    width: 120px;
+    height: 120px;
+    border-radius: 8px;
+    margin: 10px
+}
+
+.saved-title{
+    padding-right: 10px;
 }
